# iree

./: .gitmodules  CMakeLists.txt
build_tools/bazel_to_cmake/: bazel_to_cmake_targets.py
build_tools/cmake/: iree_copts.cmake
compiler/src/iree/compiler/API/python/: CMakeLists.txt
compiler/src/iree/compiler/Codegen/Common/: BufferizationAnalysis.cpp  ConvertToDestinationPassingStylePass.cpp  GPUPipelining.cpp  TransformDialectInterpreterPass.cpp
compiler/src/iree/compiler/Codegen/Interfaces/: BufferizationInterfaces.cpp  CMakeLists.txt  Interfaces.cpp  PartitionableLoopsInterface.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/: ConvertToLLVM.cpp  LLVMCPULowerExecutableTarget.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/: CMakeLists.txt  ConvertToNVVM.cpp  Passes.cpp  (+3 more)
compiler/src/iree/compiler/Tools/: CMakeLists.txt  init_iree_dialects.h
iree/compiler/Codegen/LLVMCPU/test/: linalg_transform.mlir
samples/custom_cpu_imports/: CMakeLists.txt  README.md  imports.c
samples/simple_embedding/: CMakeLists.txt
samples/tpp_import/: CMakeLists.txt  README.md  tpp_import.c
tests/e2e/xla_ops/: dot.mlir
tests/transform_dialect/tpp/: brgemm.mlir  brgemm_codegen_spec.mlir  brgemm_dispatch_spec.mlir  conv2d.mlir  conv2d_codegen_spec.mlir  conv2d_dispatch_spec.mlir  conv2d_padded.mlir  conv2d_padded_codegen_spec.mlir  conv2d_padded_dispatch_spec.mlir  iree-opt-on-tpp-ir.mlir  matmul-bias-relu.mlir  matmul-bias-relu_codegen_spec.mlir  matmul-bias-relu_dispatch_spec.mlir  matmul.mlir  matmul_codegen_spec.mlir  matmul_dispatch_spec.mlir
tools/: iree-opt-main.cc
(+16 files in other folders)
